# rosbag_cockpit

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  main.py  pyproject.toml  script_used_in_cicd.py  start.sh
.devcontainer/: Dockerfile  devcontainer.json  init.sh
backend/: .gitignore  README.md  backend.Dockerfile  main.py  pyproject.toml
backend/bag_processor/: script_used_in_cicd.py
backend/bag_processor/api/: __init__.py  exception_handlers.py  logging.py  models.py  routes.py  schema.py  services.py  utils.py
backend/bag_processor/bag_manager/: error.py  parser.py  player.py
backend/bag_processor/database/: __init__.py  db_connection_pool.py  db_initializer.py  modles.py  operations.py  schema.py
backend/bag_processor/test/: test_bag_manager_parser.py
frontend/: .env.production  README.md  frontend.Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  router.js
frontend/src/assets/: tailwind.css
frontend/src/components/: Dashboard.vue  DataTable.vue  NavBar.vue  RosbagDetail.vue  Visualization.vue
frontend/src/services/: api.js  rosbagService.js
frontend/src/views/: Dashboard.vue  DatabaseView.vue  HomeView.vue
rosbag_cockpit/api/: __init__.py  models.py  routes.py  schema.py
rosbag_cockpit/bag_manager/: __init__.py  parser.py  player.py  utils.py
rosbag_cockpit/database/: __init__.py  modles.py  operation.py  operations.py  schema.py
