[project]
name = "rosbag_cockpit"
version = "0.1.0"
description = "A tool for managing ROS bag metadata in SQLite database"
authors = [
    {name = "Rui Hu", email = "rui.hu@rennteam.uni-stuttgart.de"},
]
requires-python = ">=3.8"

dependencies = [
    "pyyaml",
    "pydantic",
    "uvicorn",
    "sqlalchemy",
    "fastapi",
    "pytest==6.2.5",
    "docker"
]

[project.scripts]
rosbag-db = "rosbag_cockpit:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rosbag_cockpit"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.rosbag_cockpit]
ros_dependencies = [
    "rosbag",
    "rospkg"
]
